--- a/index.html
+++ b/index.html
@@ -111,17 +111,9 @@
         return intersect;
       }
 
-      //Возвращает расстояние до ближайших препятствий сверху, снизу, справа и слева
-      function minDistance(r){
-        var obst = gMap.obstacles; 
-        var zomb = gMap.zombies;   
-        var r0 = {x1: r.x, y1: r.y, x2: r.x + r.w, y2: r.y + r.h};
-        var dist = {up:5*HEIGHT, down:5*HEIGHT, left:5*WIDTH, right:5*WIDTH};
-
-        for(var i = 0; i < obst.length; i++){
-          var r1 = {x1: obst[i].x, y1: obst[i].y, x2: obst[i].x + obst[i].width, y2: obst[i].y + obst[i].height};
-
-          if((r0.y2 >= r1.y1) && (r1.y2 >= r0.y1)){
+      //Функция записывает расстояние между прямоугольниками в dist, если оно меньше, чем текущее
+      function getDistance(r0, r1, dist){
+        if((r0.y2 > r1.y1) && (r1.y2 > r0.y1)){
             if(r1.x2 < r0.x1){
               var t = r0.x1 - r1.x2;
               dist.left = (t < dist.left)? t : dist.left;
@@ -138,7 +130,7 @@
               }
             }
           }
-          if((r0.x2 >= r1.x1) && (r1.x2 >= r0.x1)){
+          if((r0.x2 > r1.x1) && (r1.x2 > r0.x1)){
             if(r1.y2 < r0.y1){
               var t = r0.y1 - r1.y2;
               dist.up = (t < dist.up)? t : dist.up;
@@ -154,51 +146,33 @@
                   dist.down = 0; // нельзя вниз
               }
             }
-          }
+          }        
+      }
+      //Возвращает расстояние до ближайших препятствий сверху, снизу, справа и слева
+      function minDistance(r){
+        var obst = gMap.obstacles; 
+        var zomb = gMap.zombies;   
+        var r0 = {x1: r.x, y1: r.y, x2: r.x + r.w, y2: r.y + r.h};
+        var r1 = null;
+        var i = 0;
+        var dist = {up:5*HEIGHT, down:5*HEIGHT, left:5*WIDTH, right:5*WIDTH};
+
+        var ol = obst.length;
+        for(i = ol - 1; i >= 0; i--){
+          r1 = {x1: obst[i].x, y1: obst[i].y, x2: obst[i].x + obst[i].width, y2: obst[i].y + obst[i].height};
+          getDistance(r0, r1, dist);          
         }
 
-        zomb.push(player);//Добавим игрока в массив зомбей, чтобы легко проверятьЧ
-        for(var i = 0; i < zomb.length; i++){          
-          var r1 = {x1: zomb[i].animation.x - zomb[i].hitRadius, y1: zomb[i].animation.y - zomb[i].hitRadius,
-                    x2: zomb[i].animation.x + zomb[i].hitRadius, y2: zomb[i].animation.y + zomb[i].hitRadius};
+        zomb.push(player);//Добавим игрока в массив зомбей, чтобы легко проверять
+        var zl = zomb.length;
+        for(i = zl - 1; i >= 0; i--){          
+          r1 = {x1: zomb[i].animation.x - zomb[i].hitRadius, y1: zomb[i].animation.y - zomb[i].hitRadius,
+                x2: zomb[i].animation.x + zomb[i].hitRadius, y2: zomb[i].animation.y + zomb[i].hitRadius};
 
           if((r1.x1 == r0.x1)&&(r1.x2 == r0.x2)&&(r1.y1 == r0.y1)&&(r1.y2 == r0.y2))continue;//the same object
 
-          if(!(r0.y2 < r1.y1 || r1.y2 < r0.y1)){
-            if(r1.x2 < r0.x1){
-              var t = r0.x1 - r1.x2;
-              dist.left = (t < dist.left)? t : dist.left;
-            }else if(r0.x2 < r1.x1){
-              var t = r1.x1 - r0.x2;
-              dist.right = (t < dist.right)? t : dist.right;
-            }else{
-                //Intersection
-                if(r0.x2 - r1.x1 > r1.x2 - r0.x1)
-                  dist.left = 0;
-                else
-                  dist.right = 0;
-            }
-          }
-          if(!(r0.x2 < r1.x1 || r1.x2 < r0.x1)){
-            if(r1.y2 < r0.y1){
-              var t = r0.y1 - r1.y2;
-              dist.up = (t < dist.up)? t : dist.up;
-            }else if(r0.y2 < r1.y1){
-              var t = r1.y1 - r0.y2;
-              dist.down = (t < dist.down)? t : dist.down;
-            }else{
-                //Позволяем вылезти туда, куда короче
-                if(r0.y2 - r1.y1 > r1.y2 - r0.y1)
-                  dist.up = 0; //нельзя вверх
-                else
-                  dist.down = 0; // нельзя вниз
-            }
-          }
+          getDistance(r0, r1, dist);
         }    
-        if(dist.right >=1) dist.right -= 1;
-        if(dist.down >=1) dist.down -= 1;
-        if(dist.left >=1) dist.left -= 1;
-        if(dist.up >=1) dist.up -= 1;
 
         return dist;
       }
