--- a/index.html
+++ b/index.html
@@ -63,54 +63,6 @@
           xhr.send();
       }
 
-      //Возвращает пересечение прямоугольников как прямоугольник
-      function rectIntersection(r1, r2){
-        var x1 = r1.x, y1 = r1.y;
-        var x2 = r1.x + r1.w, y2 = r1.y + r1.h;
-
-        var x3 = r2.x, y3 = r2.y;
-        var x4 = r2.x + r2.w, y4 = r2.y + r2.h;
-
-        var xt = 0, yt = 0;
-        var intersect = {x: 0, y: 0, w: 0, h: 0, xt:0, yt:0}
-
-        if(y2 < y3 || y4 < y1) return intersect; //All is ok, no intersections
-        if(x2 < x3 || x4 < x1) return intersect; //All is ok, no intersections              
-
-        if(x1 < x3){ //x1 x3 x2 x4
-          intersect.x = x3;
-          intersect.w = x2 - x3;
-          xt = - intersect.w - 1;
-        }else if(x2 < x4){ //x3 x1 x2 x4
-          intersect.x = x3;
-          intersect.w = x2 - x3;
-          xt = - intersect.w - 1;
-        }else{ // x3 x1 x4 x2
-          intersect.x = x1;
-          intersect.w = x4 - x1;
-          xt = intersect.w + 1;
-        }                            
-
-
-        if(y1 < y3){ //y1 y3 y2 y4
-          intersect.y = y3;
-          intersect.h = y2 - y3;
-          yt = - intersect.h - 1;
-        }else if(y2 < y4){ //y3 y1 y2 y4
-          intersect.y = y3;
-          intersect.h = y2 - y3;
-          yt = - intersect.h - 1;
-        }else{ // y3 y1 y4 y2
-          intersect.y = y1;
-          intersect.h = y4 - y1;
-          yt = intersect.h + 1;
-        }                                                   
-        intersect.xt = xt;
-        intersect.yt = yt;
-
-        return intersect;
-      }
-
       //Функция записывает расстояние между прямоугольниками в dist, если оно меньше, чем текущее
       function getDistance(r0, r1, dist){
 
@@ -200,38 +152,8 @@
         //небезопасный телепорт
         this.moveTo = function(x, y){
 
-          var obst = gMap.obstacles;    
-          var intersect0 = {x: 0, y: 0, w: 0, h: 0, xt: 0, yt:0 };
-
-          var r1 = {x: x - this.hitRadius, y: y - this.hitRadius, w: 2*this.hitRadius, h: 2*this.hitRadius};
-
-          for(var i = 0; i < obst.length; i++){
-            var r2 = {x: obst[i].x, y: obst[i].y, w: obst[i].width, h: obst[i].height};
-
-            var intersect = rectIntersection(r1, r2);
-
-            if(intersect0.w * intersect0.h < intersect.w * intersect.h) intersect0 = intersect;
-          }
-
-          var zomb = gMap.zombies;
-          for(var i = 0; i < zomb.length; i++){
-            if(zomb[i] == this) continue;
-            var r2 = {x: zomb[i].animation.x - zomb[i].hitRadius, y: zomb[i].animation.y - zomb[i].hitRadius,
-                      w: 2 * zomb[i].hitRadius, h: 2 * zomb[i].hitRadius};
-
-            var intersect = rectIntersection(r1, r2);
-
-            if(intersect0.w * intersect0.h < intersect.w * intersect.h) intersect0 = intersect;
-          }
-
-          if(intersect0.w > intersect0.h){
-            intersect0.xt = 0;
-          }else{
-            intersect0.yt = 0;
-          }
-
-          this.animation.x = x + intersect0.xt;
-          this.animation.y = y + intersect0.yt;
+          this.animation.x = x;
+          this.animation.y = y;
 
           if(DEBUG){
             this.hitBox.x = this.animation.x;
@@ -361,35 +283,13 @@
 
         //not safe teleport
         this.moveTo = function(x, y){        
-          var obst = gMap.obstacles;    
-          this.shotAnimation.x = x + 17*Math.cos(this.animation.rotation*Math.PI/180 + 0.49);
-          this.shotAnimation.y = y + 17*Math.sin(this.animation.rotation*Math.PI/180 + 0.49);
-
-          var intersect0 = {x: 0, y: 0, w: 0, h: 0, xt: 0, yt:0 };
-          var r1 = {x: x - this.hitRadius, y: y - this.hitRadius, w: 2*this.hitRadius, h: 2*this.hitRadius};
-
-
-
-          for(var i = 0; i < obst.length; i++){            
-            var r2 = {x: obst[i].x, y: obst[i].y, w: obst[i].width, h: obst[i].height};
-
-            var intersect = rectIntersection(r1, r2);
-
-            if(intersect0.w * intersect0.h < intersect.w * intersect.h) intersect0 = intersect;
-          }
-
-          if(intersect0.w > intersect0.h){
-            intersect0.xt = 0;
-          }else{
-            intersect0.yt = 0;
-          }
           
-          this.animation.x = x + intersect0.xt;
-          this.animation.y = y + intersect0.yt;
-          this.shotAnimation.x = x + 23*Math.cos(this.animation.rotation*Math.PI/180 - Math.PI/2 + 0.36) + intersect0.xt;
-          this.shotAnimation.y = y + 23*Math.sin(this.animation.rotation*Math.PI/180 - Math.PI/2 + 0.36) + intersect0.yt;
-          this.healthBar.x = x + intersect0.xt;
-          this.healthBar.y = y + intersect0.yt;
+          this.animation.x = x;
+          this.animation.y = y;
+          this.shotAnimation.x = x + 23*Math.cos(this.animation.rotation*Math.PI/180 - Math.PI/2 + 0.36);
+          this.shotAnimation.y = y + 23*Math.sin(this.animation.rotation*Math.PI/180 - Math.PI/2 + 0.36);
+          this.healthBar.x = x;
+          this.healthBar.y = y;
 
           if(DEBUG){
             this.hitBox.x = this.animation.x;
@@ -628,7 +528,7 @@
           var y1 = player.animation.y;          
 
           var mapMove = {dx:0, dy:0};
-          var mvC = 0.3; // Константа, поределяющая перемещение карты
+          var mvC = 0.4; // Константа, поределяющая перемещение карты
 
           if(x1 < WIDTH * mvC && gMap.position.x < 0)
             mapMove.dx = x0 - x1;
@@ -979,13 +879,19 @@
                       }
 
                       if(data[i].type == "playerSpawn"){
-                        player = new Player(data[i].x, data[i].y);                      
+                        player = new Player(data[i].x, data[i].y); 
                         this.zombies.push(player);//Добавим игрока в массив зомбей, чтобы легко проверять на столкновения
                       }
                     };
                   }
               }
+
+            var x = player.animation.x; 
+            var y = player.animation.y;
+            gMap.move(- x + WIDTH/2, - y + HEIGHT/2);//Центрируем карту
+
           }
+
 
 
           //Подвинем все тайлы, всех зомбей, все спаунеры зомбей
@@ -993,9 +899,6 @@
           this.move = function (dx, dy){
             dx = dx || 0;
             dy = dy || 0;
-            //Избегаем излишних движений
-            if(this.position.x + dx > 0) dx = - this.position.x;            
-            if(this.position.y + dy > 0) dy = - this.position.y;
 
             var i = 0;
 
