New map added, texture improved, balance chaned

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       var KEYCODE_1 = 49, KEYCODE_2 = 50, KEYCODE_3 = 51;
       var KEYCODE_P = 80, KEYCODE_ESC = 27;      
 
-      var LOAD_PARTS = 16;
+      var LOAD_PARTS = 17;
       
       var DEBUG_FIELD;
       var DEBUG_SHAPE; 
@@ -273,6 +273,7 @@
           this.healthPoints = r.maxHealthPoints;
           this.damage = r.damage;
           this.attackDelay = r.attackDelay;
+          this.speed = r.speed;
 
 
           if(DEBUG){
